# DonkeyKonj

./: .gitignore  CMakeLists.txt  Entity.h  EntityManager.cpp  Game.cpp  pch.h
Doc/: Diagram Class Donkey Kong.xml  UML Global.puml
Media/Maps/: map_donkeykong  map_donkeykong2
Media/Textures/: DonkeyKong_SpritesSheet  info-pictures.txt
include/: EntityManager.h
src/: CMakeLists.txt  DonkeyKong.cpp  Game.cpp  Game.h  Mario.cpp  Mario.h  pch.h
src/game/: CMakeLists.txt  EntityGenerator.cpp  EntityGenerator.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameData.cpp  GameData.h  SpritesSheet.cpp  SpritesSheet.h
src/game/entities/: Barrel.cpp  Barrel.h  BonusItem.cpp  BonusItem.h  DonkeyKong.cpp  DonkeyKong.h  Entity.cpp  Entity.h  Ladder.cpp  Ladder.h  Mario.cpp  Mario.h  Peach.cpp  Peach.h  Platform.cpp  Platform.h  Player.cpp  Player.h  ScoreTab.cpp  ScoreTab.h  StaticEntity.cpp  StaticEntity.h  Void.cpp  Void.h
src/game/map/: GenerateMap.cpp  GenerateMap.h  Map.cpp  Map.h
src/main/: DonkeyKong.cpp
